Service fully operational. Some minor fixes required further but is fully operational under ordinary use.